--- a/UI.kv
+++ b/UI.kv
@@ -3,11 +3,13 @@
 <UI>:
     title: 'InputDialog'
     auto_dismiss: False
+    id: test1
 
     RelativeLayout:
         orientation: 'vertical'
         pos: self.pos
         size: root.size
+        id: 'test2'
 
         Label:
             text: "Enter compounds below, seperated by ; or a newline. Press Ctrl+Enter to proceed!"
