--- a/UI.kv
+++ b/UI.kv
@@ -9,7 +9,7 @@
         orientation: 'vertical'
         pos: self.pos
         size: root.size
-        id: 'test2'
+        id: test2
 
         Label:
             text: "Enter compounds below, seperated by ; or a newline. Press Ctrl+Enter to proceed!"
